# advent-rust

2015/01/: Cargo.toml
2015/01/src/: main.rs
2015/02/: Cargo.toml
2015/02/src/: main.rs
2015/03/: Cargo.toml
2015/03/src/: main.rs
2015/04/: Cargo.toml
2015/04/src/: main.rs
2015/05/: Cargo.toml
2015/05/src/: main.rs
2022/01/src/: main.rs
2022/02/src/: main.rs
2022/03/: Cargo.toml
2022/03/benches/: prince.rs
2022/03/src/: main.rs
2022/04/: Cargo.toml
2022/04/src/: main.rs
2022/05/: Cargo.toml
2022/05/benches/: prince.rs
2022/05/src/: main.rs
2023/01/: Cargo.toml
2023/01/src/: lib.rs  part1.py
2023/02/: Cargo.toml
2023/02/src/: lib.rs
2024/: Cargo.toml
2024/01/: Cargo.toml
2024/01/src/: lib.rs
2024/02/: Cargo.toml
2024/02/src/: lib.rs
2024/03/: Cargo.toml
2024/03/src/: lib.rs
2024/04/: Cargo.toml
2024/04/src/: lib.rs
2024/05/: Cargo.toml
2024/05/src/: lib.rs
