[workspace]
resolver = "2"
members = [
    "01",
    "02",
    "03",
    "04",
]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "allow"
cognitive_complexity = "allow"

[workspace.lints.rust]
dead_code = "allow"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
